[package]
name = "syn-assets"
version = "0.0.0"
description = "Syncy asset system"
authors = ["Molyee Team <https://github.com/molyee-tech>"]
repository = "https://github.com/molyee-tech/syncy"
license = "LICENSE"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.130", features = ["derive"], optional = true }

[features]
default = ["std"]
std = ["serde"]
