[package]
name = "syncy-cli"
version = "0.0.0"
description = "CLI tool"
authors = ["Molyee Team <https://github.com/molyee-tech>"]
repository = "https://github.com/molyee-tech/syncy"
license = "LICENSE"
edition = "2021"
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "syn"
path = "src/main.rs"

[features]
default = ["consumer", "k8s"]
k8s = ["fluvio-cli/k8s"]
consumer = ["fluvio-cli/consumer"]

[dependencies]
clap = { version = "3.1.8", features = ["std", "derive"], default-features = false }
color-eyre = { version = "0.6.0", default-features = false }
fluvio-cli = { git = "https://github.com/molyee-tech/fluvio", default-features = false }

[dev-dependencies]
fluvio-future = { version = "0.3.14", features = ["fixture"] }
