[package]
name = "syncy-cli"
version = "0.0.0"
description = "Syncy network management CLI utility"
authors = ["Molyee Team <https://github.com/molyee-tech>"]
repository = "https://github.com/molyee-tech/syncy"
license = "LICENSE"
edition = "2021"
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "syn"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "3.2.17", features = ["std", "derive"], default-features = false }
colored = "2.0.0"
env_logger = "0.9.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_yaml = "0.9.9"
thiserror = "1.0.32"
mimalloc-rust = { version = "*", optional = true }

[features]
default = []
fast-alloc = ["mimalloc-rust"]
