[package]
name = "syncy-hub"
version = "0.1.0"
authors = ["Molyee Team <team@molyee.org"]
homepage = "https://molyee.org/"
repository = "https://github.com/molyee-labs/syncy/"
license = "LICENSE.md"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "syn-hub"

[dependencies]
fluvio = { git = "https://github.com/molyee-labs/fluvio" }
