[package]
name = "syncy-hub"
version = "0.0.0"
description = "Hub node"
authors = ["Molyee Team <https://github.com/molyee-tech>"]
repository = "https://github.com/molyee-tech/syncy/"
license = "LICENSE"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "syn-hub"
path = "src/main.rs"

[features]
default = ["consumer", "k8s"]
k8s = ["fluvio-cli/k8s"]
consumer = ["fluvio-cli/consumer"]

[dependencies]
clap = { version = "3.1.8", features = ["std", "derive"], default-features = false }
color-eyre = { version = "0.6.0", default-features = false }
fluvio-cli = { git = "https://github.com/molyee-tech/fluvio", default-features = false }
fluvio-future = { version = "0.3.14", features = ["fixture"] }

