[package]
name = "syncy-node"
version = "0.0.0"
description = "Syncy common peer node implementation"
authors = ["Molyee Team <https://github.com/molyee-tech>"]
repository = "https://github.com/molyee-tech/syncy"
license = "LICENSE"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
serde = "1.0.143"
serde_json = "1.0.83"
tokio = "1.20.1"
syncy-libp2p = { path = "../crates/libp2p" }
once_cell = "1.13.1"
thiserror = "1.0.32"
