[package]
name = "libp2p"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-std = "1.12"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

libp2p = { git = "https://github.com/molyee-tech/libp2p" }
libp2p-noise = { git = "https://github.com/molyee-tech/libp2p" }

multihash = { version = "0.16", features = ["serde-codec"] }
bs58 = "0.4"
failure = "0.1"
base64 = "0.13"
